# GAS_schem_gen

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  vscode.patch
.github/: copilot-instructions.md
docs/: API.md  USER.md
gas_schema_generator/: __init__.py  main.py
gas_schema_generator/core/: __init__.py  config.py  domain.py  intents.py  model.py  reducer.py  validation.py
gas_schema_generator/infra/: __init__.py  l10n.py  logging.py  store.py
gas_schema_generator/io/: __init__.py  effects.py  pdf_drawer.py
gas_schema_generator/labels/: lt.json
gas_schema_generator/locales/: lt.json
gas_schema_generator/ui/: __init__.py  app.py
tests/: conftest.py  test_effects_loadsave.py  test_integration_pdf.py  test_reducer_smoke.py  test_validation.py
