[project]
name = "gas-schema-generator"
version = "0.1.0"
description = "Parametrinis GAS schemų generatorius (MVI, Tkinter + ReportLab)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "reportlab>=4.0.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]