[project]
name = "gas-schema-generator"
version = "0.1.0"
description = "Parametrinis GAS schemų generatorius (MVI, Tkinter + ReportLab)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "reportlab>=4.0.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
ignore_missing_imports = true

# Ослабим строгость для IO и UI через overrides
[[tool.mypy.overrides]]
module = ["gas_schema_generator.io.*"]
disallow_untyped_defs = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = ["gas_schema_generator.ui.*"]
disallow_untyped_defs = false
check_untyped_defs = false

[tool.ruff]
line-length = 160
select = ["E", "F", "W", "I"]

[tool.setuptools.package-data]
"gas_schema_generator.locales" = ["*.json"]
"gas_schema_generator.labels" = ["*.json"]